--- a/view.html
+++ b/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Main Template with Sub-Template</title>
+    <title>Go Wiki</title>
 </head>
 <body>
 	<header>
