--- a/dash.html
+++ b/dash.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Go Wiki</title>
+
+</head>
+<body>
 <h1>Wiki Pages</h1>
 
 <p>
@@ -11,3 +18,5 @@
 		{{end}}
 	</ul>
 </p>
+</body>
+</html>
