--- a/edit.html
+++ b/edit.html
@@ -1,6 +1,42 @@
-<h1>Editing {{.Title}}</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Go Wiki</title>
+<style>
+	#main {
+		max-width: 1200px;
+	}
+	.buttons > input {
+		cursor: pointer;
+	}
+	.buttons,
+	textarea {
+		max-width: 650px;
+	}
+	@media (max-width: 650px) {
+		.buttons,
+		textarea {
+			max-width: 100%;
+		}
+	}
+	.save {
+		float: right;
+	}
+</style>
+</head>
+<body>
+<div id="main">
+	<h1>Editing - {{.Title}}</h1>
 
-<form action="/save/{{.Title}}" method="POST">
-<div><textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
-<div><input type="submit" name="submit" value="Cancel"><input type="submit" name="submit" value="Save"></div>
-</form>
+	<form action="/save/{{.Title}}" method="POST">
+	<div>
+		<textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea>
+	</div>
+	<div class="buttons">
+		<input class="save" type="submit" name="submit" value="Save">
+		<input type="submit" name="submit" value="Cancel">
+	</div>
+	</form>
+</div>
+</body>
+</html>
