--- a/view.html
+++ b/view.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <title>Go Wiki</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link rel="stylesheet" href="/static/css/base.css" media="all" />
+    <link rel="stylesheet" href="/static/css/view.css" media="all" />
 </head>
 <body>
 	<header>
-    	<a href="/">Home</a>
+		<span class="breadcrumb"><a href="/">Home</a> &gt; {{.Title}}</span>
     </header>
-	<h1>{{.Title}}</h1>
 
-	<p>[<a href="/edit/{{.Title}}">edit</a>]</p>
+	<h1 class="page-title">{{.Title}} [<a href="/edit/{{.Title}}">edit</a>]</h1>
 
-	<div>{{.HTML}}</div>
+	<div id="main">{{.HTML}}</div>
 </body>
 </html>
